--- a/CV.html
+++ b/CV.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>mamiecincotta.github.io - Mamie Cincotta</title>
+<title>mamiecincotta.github.io - CV</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -89,7 +89,7 @@ ul.task-list li input[type="checkbox"] {
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav navbar-nav-scroll me-auto">
   <li class="nav-item">
-    <a class="nav-link active" href="./index.html" aria-current="page"> 
+    <a class="nav-link" href="./index.html"> 
 <span class="menu-text">Home</span></a>
   </li>  
   <li class="nav-item">
@@ -116,21 +116,14 @@ ul.task-list li input[type="checkbox"] {
 <!-- sidebar -->
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-        <nav id="TOC" role="doc-toc" class="toc-active">
-    <h2 id="toc-title">On this page</h2>
-   
-  <ul>
-  <li><a href="#more-information" id="toc-more-information" class="nav-link active" data-scroll-target="#more-information">More Information</a></li>
-  <li><a href="#contact-me" id="toc-contact-me" class="nav-link" data-scroll-target="#contact-me">Contact me</a></li>
-  </ul>
-</nav>
+        
     </div>
 <!-- main -->
 <main class="content" id="quarto-document-content">
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Mamie Cincotta</h1>
+<h1 class="title">CV</h1>
 </div>
 
 
@@ -147,22 +140,9 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p>I am a second year doctoral student at the University of Texas at Dallas.</p>
-<section id="more-information" class="level3">
-<h3 class="anchored" data-anchor-id="more-information">More Information</h3>
-<p>Interests:</p>
-<ul>
-<li>American Bureaucracy</li>
-<li>State and Local Politics</li>
-<li>Federalism</li>
-</ul>
-</section>
-<section id="contact-me" class="level3">
-<h3 class="anchored" data-anchor-id="contact-me">Contact me</h3>
-<p><a href="mailto:mamiecincotta@utdallas.edu">mamiecincotta@utdallas.edu</a></p>
+<p>To be added soon.</p>
 
 
-</section>
 
 </main> <!-- /main -->
 <script id="quarto-html-after-body" type="application/javascript">
