--- a/Assignment1.html
+++ b/Assignment1.html
@@ -128,11 +128,8 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">On this page</h2>
    
   <ul>
-  <li><a href="#assignment-one" id="toc-assignment-one" class="nav-link active" data-scroll-target="#assignment-one">Assignment One</a>
-  <ul class="collapse">
-  <li><a href="#analysis" id="toc-analysis" class="nav-link" data-scroll-target="#analysis">Analysis:</a></li>
-  <li><a href="#improvements" id="toc-improvements" class="nav-link" data-scroll-target="#improvements">Improvements:</a></li>
-  </ul></li>
+  <li><a href="#assignment-one" id="toc-assignment-one" class="nav-link active" data-scroll-target="#assignment-one">Assignment One</a></li>
+  <li><a href="#assignment-two" id="toc-assignment-two" class="nav-link" data-scroll-target="#assignment-two">Assignment Two</a></li>
   </ul>
 </nav>
     </div>
@@ -161,18 +158,18 @@ ul.task-list li input[type="checkbox"] {
 <section id="assignment-one" class="level1">
 <h1>Assignment One</h1>
 <p><a href="https://utdallas.qualtrics.com/jfe/form/SV_aavYATLIL7LFra6">Link to survey</a></p>
-<section id="analysis" class="level3">
-<h3 class="anchored" data-anchor-id="analysis">Analysis:</h3>
+<p>Analysis:</p>
 <p>a. The survey is structured with an introduction first,</p>
 <p>b. The questionnaire is composed of questions about levels of agreement/disagreemnet with given statements, purchasing habits, willingness to buy certain theoretical products and what the pricing should be, and demographic information.</p>
 <p>c. The questions are ordered with the agreement/disagreement assessments being placed first, questions about purchasing habits coming after, and demographic information being placed last.</p>
-</section>
-<section id="improvements" class="level3">
-<h3 class="anchored" data-anchor-id="improvements">Improvements:</h3>
+<p>Improvements:</p>
 <p>I think the page breaks could be placed in a way to keep related questions grouped together on the same page. This would improve user experience by allowing the respondent to view their responses to related questions.</p>
-
-
 </section>
+<section id="assignment-two" class="level1">
+<h1>Assignment Two</h1>
+<p>c. The Google Trends website is more visually appealing to me then RStudio, but I found it a little bit more confusing to see how to download the data on the website than with RStudio. I enjoy that RStudio gives me more tools to graph the data on my own than the website, but I’m not proficient enough in RStudio yet to create graphs that show shading based on the states.</p>
+
+
 </section>
 
 </main> <!-- /main -->
